--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
             <span>
                 Already have an account?
             </span>
-            <a href="signin.html">
+            <a href="index.html">
               Sign in here 
             </a>
           </p>
