--- a/index.html
+++ b/index.html
@@ -11,22 +11,13 @@
     <header class="form_sign-in">
         <h1 class="form_sign-in-title">매?</h1>
     </header>
-    <form action="main.html" method="get" id="sign-in-form">
-        <input type="submit" value="Sign In" />
-        <a href="#">Sign in with Kakao</a>
-          <p>
-            <b>
-              Forgot password?
-            </b>
-          </p>
-          <p>
-            <span>
-              Don't have an account?
-            </span>
-            <a href="signup.html">
-              Sign up here  
-            </a>
-          </p>
+    <form class="sign-in-title">
+        <button type="button" onclick="location.href='signup.html' "><i class="fa-solid fa-comment"></i>Sign in with Kakao</button>
     </form>
+    <script 
+      src="https://kit.fontawesome.com/493cc16663.js"
+      crossorigin="anonymous"
+    ></script>
 </body>
 </html>
+
