--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
             <option value="etc">Etc</option>
         </select>
         <input type="submit" value="Sign up"/>
-        <a href="#">Sign up with Kakao</a>
+        <button type="button" onclick="location.href='signup.html' "><i class="fa-solid fa-comment"></i>Sign up with Kakao</button>
           <p>
             <span>
                 Already have an account?
@@ -33,6 +33,9 @@
             </a>
           </p>
     </form>
-
+    <script 
+      src="https://kit.fontawesome.com/493cc16663.js"
+      crossorigin="anonymous"
+    ></script>
 </body>
 </html>
