--- a/main.html
+++ b/main.html
@@ -9,9 +9,51 @@
 </head>
 <body>
     <div class="status-bar">
-        <div class="status-return">
-            <span>돌아가기</span>
+        <div class="status-bar__column">
+            <span>로고</span>
+        </div>
+        <div class="status-bar__column">
+            <span><a href="cartegory.html"><i class="fa-solid fa-bars"></i></a></span>
         </div>
     </div>
+    <header class="serch-bar">
+        <div class="serch-bar__column">
+            <i class="fas fa-search"></i>
+            <input class="search-bar__input" type="search" placeholder="검색" />
+        </div>
+        <div class="alt-header__column">
+            <select name="cartegory1">
+                <option value="">카테고리</option>
+                <option value="연플">연플</option>
+                <option value="학관">학관</option>
+                <option value="etc">Etc</option>
+            </select>
+        </div>
+        <div class="alt-header__column">
+            <select name="cartegory2">
+                <option value="">카테고리</option>
+                <option value="카페">카페 봉마루쉐</option>
+                <option value="누리샘">누리샘</option>
+                <option value="뚜레쥬르">뚜레쥬르</option>
+                <option value="토스트">토스트</option>
+                <option value="CU 편의점">CU 편의점</option>
+            </select>
+        </div>
+    </header>
+    <main class="main-screen">
+        <a href="doerrand.html">
+            <div class="errand_box">
+                    <h4 class="errand_name">심부름 제목</h4>
+                    <h6 class="errand_detail">심부름 세부사항
+                    </h6>
+              </div>
+            </div>
+        </div>
+        </a>
+    </main>
+    <script 
+      src="https://kit.fontawesome.com/493cc16663.js"
+      crossorigin="anonymous"
+    ></script>
 </body>
 </html>
