--- a/main.html
+++ b/main.html
@@ -51,6 +51,25 @@
         </div>
         </a>
     </main>
+    <nav class="nav">
+        <ul class="nav__list">
+            <li class="nav__btn">
+                <a class="nav__link" href="main.html"><i class="fa-solid fa-house"></i></a>
+            </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="errandmake.html">
+                    <i class="fa-solid fa-pencil"></i>
+            </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="mypage.html"><i class="fa-solid fa-user"></i></a>
+            </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="search.html">
+                    <span class="nav__circle"></span>  
+                <i class="fas fa-search"></i></a>
+            </li>
+        </ul>
+    </nav>
     <script 
       src="https://kit.fontawesome.com/493cc16663.js"
       crossorigin="anonymous"
