--- a/doerrand.html
+++ b/doerrand.html
@@ -10,10 +10,24 @@
 <body>
     <div class="status-bar">
         <div class="status-bar__column">
-            <span><a href="main.html"><i class="fa-solid fa-arrow-left"></i></a></span>
+            <span><a href="main.html"><i class="fa-solid fa-house"></i></a></span>
         </div>
     </div>
-    
+    <header class="form-errand">
+        <h1 class="form-errand_name">연플 커피</h1>
+            <div class="form-errand_detail">
+            <div>심부름 내용 : 연플에서 커피구매하여 전달하기 </div>
+            <div>카테고리 : 연플</div>
+            <div>상품이름 : 커피 </div>
+            <div>상품 비용 : 2500원</div>
+            <div> 구매자 정보 
+                    <li>이름 : 이연세</li>
+                    <li>별점 : <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></li>
+            </div>
+    </header>
+    <footer class="btn">
+        <button type="button" onclick="location.href='errandconfirm.html' ">수락</button>
+    </footer>
     <script 
       src="https://kit.fontawesome.com/493cc16663.js"
       crossorigin="anonymous"
