--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="form_sign-in-title">매?</h1>
     </header>
     <form class="sign-in-title">
-        <button type="button" onclick="location.href='signup.html' "><i class="fa-solid fa-comment"></i>Sign in with Kakao</button>
+        <button type="button" onclick="location.href='termsofagree.html' "><i class="fa-solid fa-comment"></i>Sign in with Kakao</button>
     </form>
     <script 
       src="https://kit.fontawesome.com/493cc16663.js"
