--- a/mypage.html
+++ b/mypage.html
@@ -52,7 +52,7 @@
                 <div class="mypage_profile-setting">
                 <a class="mypage_link" href="termsofservice.html">
                 <i class="fa-regular fa-note-sticky"></i>
-                <span>이용약관</span>
+                <span>공지사항</span>
                 </div>
                 <div class="mypage-column"></div>
             </li>
