--- a/signup.html
+++ b/signup.html
@@ -8,10 +8,10 @@
     <title>Welcome to Errand App</title>
 </head>
 <body>
-    <header class="form_sign-in">
-        <h1 class="form_sign-in-title">SIGN UP</h1>
+    <header class="form_sign-up">
+        <h1 class="form_sign-up-title">SIGN UP</h1>
     </header>
-    <form action="main.html" method="get" id="sign-in-form">
+    <form class="form_signup">
         <input name="username" type="text" placeholder="Username"/>
         <input name="phonenumber" type="text" placeholder="Phone Number"/>
         <input name="password1" type="password" placeholder="Password"/>
@@ -23,7 +23,7 @@
             <option value="etc">Etc</option>
         </select>
         <input type="submit" value="Sign up"/>
-        <button type="button" onclick="location.href='signup.html' "><i class="fa-solid fa-comment"></i>Sign up with Kakao</button>
+        <button type="button" onclick="location.href='main.html' "><i class="fa-solid fa-comment"></i>Sign up with Kakao</button>
           <p>
             <span>
                 Already have an account?
