--- a/main.html
+++ b/main.html
@@ -43,11 +43,16 @@
     <main class="main-screen">
         <a href="doerrand.html">
             <div class="errand_box">
-                    <h4 class="errand_name">심부름 제목</h4>
-                    <h6 class="errand_detail">심부름 세부사항
-                    </h6>
-              </div>
-            </div>
+                    <h3 class="errand_name">연플 커피</h3>
+                    <h4 class="errand_detail">심부름 세부사항 : 연플에서 2500원의 커피를 구매하여 '이연세'에게 전달해주기</h4>
+        </div>
+        </a>
+    </main>
+    <main class="main-screen">
+        <a href="doerrand.html">
+            <div class="errand_box">
+                    <h3 class="errand_name">CU 편의점 도시락</h3>
+                    <h4 class="errand_detail">심부름 세부사항 : CU편의점에서 4500원의 도시락을 구매하여 '이연세'에게 전달해주기</h4>
         </div>
         </a>
     </main>
