--- a/cartegory.html
+++ b/cartegory.html
@@ -6,6 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Welcome to Errand App</title>
+        <style>a { text-decoration: none; color: white; }a:visited { text-decoration: none; }a:hover { text-decoration: none; }a:focus { text-decoration: none; }a:hover, a:active { text-decoration: none; }
+        </style>
     </head>
 <body>
     <div class="status-bar">
@@ -29,7 +31,10 @@
             <li>CU 편의점</li>
             <li>달팽이카페</li>
         </ul>
-    </article> 
+    </article>
+    <div id="screensize">
+        <span>Your screen is too big :( </span>
+    </div> 
     <script 
       src="https://kit.fontawesome.com/493cc16663.js"
       crossorigin="anonymous"
