--- a/search.html
+++ b/search.html
@@ -15,10 +15,11 @@
             <span><a href="main.html"><i class="fa-solid fa-house"></i></a></span>
         </div>
     </div>
-    <header class="serch-bar_xl">
-        <h1 class="serch-bar_xl__column">
-            <i class="fas fa-search"></i>
-            <input class="search-bar__input_xl" type="search" placeholder="검색"/>
+    <header class="search-bar_xl">
+        <h1 class="search-bar_xl__column">
+            <span>
+            <input type="search" placeholder="search..."/>
+            <a class="nav__link" href="main.html"><i class="fas fa-search"></i></a>
         </h1>
     </header>
     <nav class="nav">
