--- a/cartegory.html
+++ b/cartegory.html
@@ -15,22 +15,18 @@
             <span><a href="main.html"><i class="fa-solid fa-house"></i></a></span>
         </div>
     </div>
-    <section class="cartegory_name">연플</section>
+    <section class="cartegory_name"><i class="fa-solid fa-building-columns"></i>&nbsp연플</section>
         <article class="sub_cartegory_name">
-            <ul>
-                <li>카페 봉마르쉐</li>
-                <li>누리샘</li>
-                <li>뚜레쥬르</li>
-                <li>토스트</li>
-                <li>CU 편의점</li>
-            </ul>
+                <li>카페 봉마르쉐</li></br>
+                <li>누리샘</li></br>
+                <li>뚜레쥬르</li></br>
+                <li>토스트</li></br>
+                <li>CU 편의점</li></br>
         </article> 
-    <section class="cartegory_name">학관</section>
+    <section class="cartegory_name"><i class="fa-solid fa-building-columns"></i> &nbsp학관</section>
     <article class="sub_cartegory_name">
-        <ul>
-            <li>CU 편의점</li>
+            <li>CU 편의점</li></br>
             <li>달팽이카페</li>
-        </ul>
     </article>
     <div id="screensize">
         <span>Your screen is too big :( </span>
