--- a/errandconfirm.html
+++ b/errandconfirm.html
@@ -19,18 +19,21 @@
             <div>심부름 세부정보 : 연플에서 2500원의 커피를 구매하여 '이연세'에게 전달해주기 </div>
     </header>
     <main class="person_info">
-        <div class="person_call">마님</div>
+        <span class="person_info_full">
+            <div class="person_call">마님</div>
             <div class="person_name">이름 : 이연세</div>
             <div class="person_rate">평점 : <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-    </main>
-    <main class="person_info">
-        <div class="person_call">돌쇠</div>
+        </span>
+        <span class="person_info_full">
+            <div class="person_call">돌쇠</div>
             <div class="person_name">이름 : 이컴정</div>
             <div class="person_rate">평점 : <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+        </span>
     </main>
     <footer class="btn">
-        <button type="button" onclick="location.href='main.html' ">거절</button>
-        <button type="button" onclick="location.href='errandongoing.html' ">진행</button>
+        <span><button id="rejectBtn" type="button" onclick="location.href='main.html' ">거절</button>
+        <button id="okBtn" type="button" onclick="location.href='errandongoing.html' ">진행</button>
+        </span>
     </footer>
     <div id="screensize">
         <span>Your screen is too big :( </span>
