--- a/rating.html
+++ b/rating.html
@@ -15,7 +15,7 @@
     </header>
     <form class="ratings_star_text">거래 상대의 별점을 매겨주세요!</form>
     <main class="btn">
-        <button type="button" onclick="location.href='main.html' ">완료</button>
+        <button id="btncomplete" type="button" onclick="location.href='main.html' ">완료</button>
     </main>
     <div id="screensize">
         <span>Your screen is too big :( </span>
