--- a/profilesetting.html
+++ b/profilesetting.html
@@ -15,23 +15,23 @@
             <span><a href="mypage.html"><i class="fa-solid fa-arrow-left"></i></a></span>
         </div>
     </div>
-    <header>
+    <header id="profilesetting_header">
         <h3>개인정보 수정</h3>
     </header>
         <form class="form_signup">
-            <input name="username" type="text" placeholder="Username"/>
-            <input name="phonenumber" type="text" placeholder="Phone Number"/>
-            <input name="password1" type="password" placeholder="Password"/>
-            <input name="password2" type="password" placeholder="confirm password"/>
+            <input name="username" type="text" placeholder=" Username"/>
+            <input name="phonenumber" type="text" placeholder=" Phone Number"/>
+            <input name="password1" type="password" placeholder=" Password"/>
+            <input name="password2" type="password" placeholder=" Confirm password"/>
             <select name="gender">
-                <option value="">Select Your Gender</option>
+                <option value=""> Select Your Gender</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
                 <option value="etc">Etc</option>
             </select>
         </form>
     <div class="profileBtn">
-        <button type="button" onclick="location.href='main.html' "></i>수정</button>
+    <button id="profileBttn"type="button" onclick="location.href='main.html' "></i>수정</button>
     </div>
     <div id="screensize">
         <span>Your screen is too big :( </span>
