errand_scss_end

--- a/doerrand.html
+++ b/doerrand.html
@@ -24,7 +24,7 @@
             <div>상품 비용 : 2500원</div></br>
             <div> 구매자 정보</div></br>    
                     <li>이름 : 이연세</li>
-                    <li>별점 : <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></li>
+                    <li>별점 : <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></i><i class="fa-regular fa-star"></i></i><i class="fa-regular fa-star"></i></i><i class="fa-regular fa-star"></i></li>
             </div>
     </header>
     <footer class="btn">
