--- a/errandconfirm.html
+++ b/errandconfirm.html
@@ -22,12 +22,12 @@
         <span class="person_info_full">
             <div class="person_call">마님</div>
             <div class="person_name">이름 : 이연세</div>
-            <div class="person_rate">평점 : <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+            <div class="person_rate">평점 : <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></i><i class="fa-regular fa-star"></i></i><i class="fa-regular fa-star"></i></i><i class="fa-regular fa-star"></i></div>
         </span>
         <span class="person_info_full">
             <div class="person_call">돌쇠</div>
             <div class="person_name">이름 : 이컴정</div>
-            <div class="person_rate">평점 : <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+            <div class="person_rate">평점 : <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></i><i class="fa-regular fa-star"></i></div>
         </span>
     </main>
     <footer class="btn">
