--- a/errandmake.html
+++ b/errandmake.html
@@ -17,42 +17,38 @@
     </div>
     <form class="selectcartegory">
         <div>
-            <td>카테고리 선택</td>
-            <td>
+            <span>카테고리 선택
+            <span>
                 <select name="cartegory1">
                 <option value="">-----------</option>
                 <option value="연플">연플</option>
                 <option value="학관">학관</option>
                 <option value="etc">Etc</option>
                 </select>
-            </td>
+            </span>
         </div>
         <div>
-            <td>심부름 제목</td>
-            <td><input type="text" name="writer"></td>
+            <span >심부름 제목<input id="errandName" type="text" name="writer"></span>
         </tr>
         </div>
         <div>
             <div>심부름 내용</div></br><textarea name="content"></textarea></br>
         </div>
         <div>
-            <td>상품 &nbsp 이름</td>
-            <td><input type="text" name="writer"></td>
+            <span>상품 이름<input type="text" name="writer"></span>
         </div>
         <div>
-            <td>상품 &nbsp 비용</td>
-            <td><input type="text" name="writer"></td>
+            <span>상품 비용<input type="text" name="writer"></span>
         </div>
         <div>
-            <td>심부름 비용</td>
-            <td>
-                <select name="cost">
+            <span>심부름 비용
+                <select name="cost" id="errandCost">
                 <option value="">-----------</option>
                 <option value="cost_">1,000원</option>
                 <option value="cost_">2,000원</option>
                 <option value="cost_">3,000원</option>
                 </select>
-            </td>
+            </span>
         </div>
     </form>
     <footer class="btn">
