--- a/ask.html
+++ b/ask.html
@@ -16,18 +16,18 @@
         </div>
     </div>
     <header class="ask_form">
-        <h2>문의하기</h2>
-        <h5>문의사항이 있으실 경우 문의양식을 작성 하시거나, 하단의 전화번호로 연락 부탁드립니다.</h5>
+        <h2>* 문의하기</h2></br>
+        <h5> &nbsp문의사항이 있으실 경우 문의양식을 작성 하시거나, 하단의 전화번호로 연락 부탁드립니다.</h5>
         <div class="settings__setting-column"></div>
     </header>
     <form class="contact_form">
         <div class="row">
           <label class="required" for="name">User Name:</label><br/>
-          <input id="name" class="input" name="name" type="text" value="" size="30" /><br/>
+          <input id="name" class="input" name="name" type="text" value="" size="30" />
         </div>
         <div class="row">
           <label class="required" for="email">Email:</label><br/>
-          <input id="email" class="input" name="email" type="text" value="" size="30" /><br />
+          <input id="email" class="input" name="email" type="text" value="" size="30" />
         </div>
         <div class="row">
           <label class="required" for="message">Your message:</label><br/>
