--- a/cancellederrand.html
+++ b/cancellederrand.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <main class="section-screen">
-            <section class="errand_box">
+            <section class="main_errand_box">
                     <h3 class="errand_name">연플 커피</h3>
                     <h4 class="errand_detail">심부름 세부사항 : 연플에서 2500원의 커피를 구매하여 '이연세'에게 전달해주기</h4>
             </section>
@@ -25,7 +25,7 @@
             </section>
     </main>
     <main class="section-screen">
-        <section class="errand_box">
+        <section class="main_errand_box">
                 <h3 class="errand_name">CU 편의점 도시락</h3>
                 <h4 class="errand_detail">심부름 세부사항 : CU편의점에서 4500원의 도시락을 구매하여 '이연세'에게 전달해주기</h4>
         </section>
