--- a/termsofservice.html
+++ b/termsofservice.html
@@ -15,11 +15,14 @@
             <span><a href="mypage.html"><i class="fa-solid fa-arrow-left"></i></a></span>
         </div>
     </div>
-    <header>
-        <h3>
-           저희 서비스는 영리적인 수수료를 매기고 있지 않습니다. 
-           따라서 거래 중 발생하는 고객과 고객 간 소통 문제와 비용 책정 문제에 대해서는 개입하고 있지 않습니다. 
-           추후 거래 관련 서비스가 업데이트 될 경우 공지와 함께 안내 드리겠습니다.  
+    <div id="noiceTitle">
+        <h3><i class="fa-regular fa-note-sticky"></i>  공지사항</h3>
+    </div>
+    <header class="notice">
+        <h3 class=" noitceAbout">
+            &nbsp저희 서비스는 영리적인 수수료를 매기고 있지 않습니다.</br></br>
+            &nbsp따라서 거래 중 발생하는 고객과 고객 간 소통 문제와 비용 책정 문제에 대해서는 개입하고 있지 않습니다. </br></br>
+            &nbsp추후 거래 관련 서비스가 업데이트 될 경우 공지와 함께 안내 드리겠습니다.  
         </h3>
     </header>
     <footer class="version">
