errand_scss_final

--- a/cancellederrand.html
+++ b/cancellederrand.html
@@ -14,7 +14,7 @@
         <div class="status-bar__column">
             <span><a href="mypage.html"><i class="fa-solid fa-arrow-left"></i></a></span>
         </div>
-    </div>
+    </div></br></br></br>
     <main class="section-screen">
             <section class="main_errand_box">
                     <h3 class="errand_name">연플 커피</h3>
