--- a/category.html
+++ b/category.html
@@ -14,7 +14,7 @@
         <div class="status-bar__column">
             <span><a href="main.html"><i class="fa-solid fa-house"></i></a></span>
         </div>
-    </div>
+    </div></br></br></br>
     <section class="cartegory_name"><i class="fa-solid fa-building-columns"></i>&nbsp연플</section>
         <article class="sub_cartegory_name">
                 <li>카페 봉마르쉐</li></br>
