--- a/errandmake.html
+++ b/errandmake.html
@@ -14,7 +14,7 @@
         <div class="status-bar__column">
             <span><a href="main.html"><i class="fa-solid fa-house"></i></a></span>
         </div>
-    </div>
+    </div></br></br></br>
     <form class="selectcartegory">
         <div>
             <span>카테고리 선택
