--- a/main.html
+++ b/main.html
@@ -61,6 +61,22 @@
             </div>
         </a>
     </main>
+    <main class="form-errand">
+        <a href="doerrand.html">
+            <div class="errand_box">
+                <h3 class="form-errand_name">CU 편의점 도시락</h3>
+                <h4 class="form-errand_detail">심부름 세부사항 : CU편의점에서 4500원의 도시락을 구매하여 '이연세'에게 전달해주기</h4>
+            </div>
+        </a>
+    </main>
+    <main class="form-errand">
+        <a href="doerrand.html">
+            <div class="errand_box">
+                <h3 class="form-errand_name">CU 편의점 도시락</h3>
+                <h4 class="form-errand_detail">심부름 세부사항 : CU편의점에서 4500원의 도시락을 구매하여 '이연세'에게 전달해주기</h4>
+            </div>
+        </a>
+    </main>
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
