--- a/mypage.html
+++ b/mypage.html
@@ -59,7 +59,7 @@
             </li>
             <li class="mypage_profile-setting">
                 <div class="mypage_profile-setting-column">
-                <a class="mypage_link" href="ask.html">
+                <a class="mypage_link" href="ask.html"></a>
                 <i class="fa-solid fa-bullhorn"></i>
                 <span>문의하기</span>
                 </div>
@@ -67,25 +67,24 @@
             </li>
         </ul>
     </main>
-    <nav class="nav1">
-        <ul class="nav__list1">
-            <li class="nav__btn1">
+    <nav class="nav">
+        <ul class="nav__list">
+            <li class="nav__btn">
                 <a class="nav__link" href="main.html"><i class="fa-solid fa-house fa-2x"></i></a>
             </li>
-            <li class="nav__btn2">
+            <li class="nav__btn">
                 <a class="nav__link" href="errandmake.html">
                     <span class="nav__circle badge">
                     <i class="fa-solid fa-pencil fa-2x"></i></span>
             </li>
-            <li class="nav__btn3">
+            <li class="nav__btn">
                 <a class="nav__link" href="mypage.html"><i class="fa-solid fa-user fa-2x"></i></a>
             </li>
-            <li class="nav__btn4">
+            <li class="nav__btn">
                 <a class="nav__link" href="search.html">
                     <i class="fas fa-search fa-2x"></i>
                 </a>
             </li>
-            
         </ul>
     </nav>
     <div id="screensize">
