--- a/search.html
+++ b/search.html
@@ -14,7 +14,7 @@
         <div class="status-bar__column">
             <span><a href="main.html"><i class="fa-solid fa-house"></i></a></span>
         </div>
-    </div>
+    </div></br></br></br>
     <header class="search-bar_xl">
         <h1 class="search-bar_xl__column">
             <span>
