errand_scss_finalfinal

--- a/ask.html
+++ b/ask.html
@@ -14,12 +14,12 @@
         <div class="status-bar__column">
             <span><a href="mypage.html"><i class="fa-solid fa-arrow-left"></i></a></span>
         </div>
-    </div>
+    </div></br></br>
     <header class="ask_form">
         <h2>* 문의하기</h2></br>
         <h5> &nbsp문의사항이 있으실 경우 문의양식을 작성 하시거나, 하단의 전화번호로 연락 부탁드립니다.</h5>
         <div class="settings__setting-column"></div>
-    </header>
+    </header></br>
     <form class="contact_form">
         <div class="row">
           <label class="required" for="name">User Name:</label><br/>
