--- a/errandongoing.html
+++ b/errandongoing.html
@@ -18,7 +18,7 @@
         <div class="status-bar__column">
             <span></span>
         </div>
-    </div>
+    </div></br></br></br></br>
     <header class="form-errand">
         <h1 class="form-errand_name">연플 커피</h1>
             <div class="form-errand_detail">
