--- a/termsofagree.html
+++ b/termsofagree.html
@@ -79,7 +79,7 @@
             </ul>
         </ul>
     </form>
-    <footer class="agrBtn">
+    <footer class="agrBtn1"></br></br>
         <span><button id="agreeBtn" type="button" onclick="location.href='signup.html' ">동의</button>
         <button id="disagreeBtn" type="button" onclick="location.href='index.html' ">동의 안함</button>
         </span>
