--- a/doerrand.html
+++ b/doerrand.html
@@ -14,7 +14,7 @@
         <div class="status-bar__column">
             <span><a href="main.html"><i class="fa-solid fa-house"></i></a></span>
         </div>
-    </div>
+    </div></br></br></br></br>
     <header class="form-errand">
         <h1 class="form-errand_name">연플 커피</h1>
             <div class="form-errand_detail">
