--- a/errandconfirm.html
+++ b/errandconfirm.html
@@ -12,7 +12,7 @@
 <body>
     <div class="status-bar">
         <div class="status-bar__column">  </div>
-    </div>
+    </div></br></br></br></br>
     <header class="form-errand">
         <h1 class="form-errand_name">연플 커피</h1>
             <div class="form-errand_detail">
