--- a/mypage.html
+++ b/mypage.html
@@ -14,7 +14,7 @@
         <div class="status-bar__column">
             <span id="home1" onclick="location.href='main.html' "><i class="fa-solid fa-house"></i></span>
         </div>
-    </div>
+    </div></br></br>
     <header class="mypage_myinfo">
         <div class="myinfo">
             <h1 class="myinfo_nickname">이연세</h1></br>
@@ -29,7 +29,7 @@
                 <div class="mypage_profile-setting-column">
                 <a class="mypage_link" href="profilesetting.html">
                 <i class="fa-regular fa-user"></i>
-                <span>프로필 설정</span>
+                <span>프로필 설정</span></a>
                 </div>
                 <div class="mypage_profile-setting-column"></div>
             </li>
@@ -37,7 +37,7 @@
                 <div class="mypage_profile-setting-column">
                 <a class="mypage_link" href="errandlist.html">
                 <i class="fa-solid fa-list"></i>
-                <span>심부름 내역</span>
+                <span>심부름 내역</span></a>
                 </div>
                 <div class="mypage_profile-setting-column"></div>
             </li>
@@ -45,7 +45,7 @@
                 <div class="mypage_profile-setting-column">
                 <a class="mypage_link" href="cancellederrand.html">
                 <i class="fa-solid fa-ban"></i>
-                <span>취소된 심부름</span>
+                <span>취소된 심부름</span></a>
                 </div>
                 <div class="mypage_profile-setting-column"></div>
             </li>
@@ -53,15 +53,15 @@
                 <div class="mypage_profile-setting-column">
                 <a class="mypage_link" href="termsofservice.html">
                 <i class="fa-regular fa-note-sticky"></i>
-                <span>공지사항</span>
+                <span>공지사항</span></a>
                 </div>
                 <div class="mypage_profile-setting-column"></div>
             </li>
             <li class="mypage_profile-setting">
                 <div class="mypage_profile-setting-column">
-                <a class="mypage_link" href="ask.html"></a>
+                <a class="mypage_link" href="ask.html">
                 <i class="fa-solid fa-bullhorn"></i>
-                <span>문의하기</span>
+                <span>문의하기</span></a>
                 </div>
                 <div class="mypage_profile-setting-column"></div>
             </li>
